GrpcModule: tiny refactor